opam-version: "1.2"
maintainer: "konstantinsromanov@gmail.com"
authors: ["Konstantin Romanov"]
homepage: "https://github.com/ksromanov/ppx_string_interpolation"
bug-reports: "https://github.com/ksromanov/ppx_string_interpolation/issues"
dev-repo: "git+https://github.com/ksromanov/ppx_string_interpolation.git"
license: "Apache-2.0"
description: "String interpolation PPX preprocessor"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
  "ppxlib" {build}
  "sedlex" {build}
]
available: [ ocaml-version >= "4.03.0" ]
