opam-version: "1.2"
name: "ppx_string_interpolation"
synopsis: "String interpolation PPX preprocessor"
description: "
String interpolation PPX preprocessor.
"
maintainer: "Konstantin Romanov <konstantinsromanov@gmail.com>"
authors: ["Konstantin Romanov <konstantinsromanov@gmail.com>"]
homepage: "https://github.com/ksromanov/ppx_string_interpolation"
bug-reports: "https://github.com/ksromanov/ppx_string_interpolation/issues"
dev-repo: "git+https://github.com/ksromanov/ppx_string_interpolation.git"
license: "Apache-2.0"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
  "ppxlib" {build}
  "sedlex" {build}
]
available: [ ocaml-version >= "4.03.0" ]
